# hello_streamer

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  build.py  pyproject.toml
docs/: audit-2026-06-16.md  settings-wireframe.html  state-machines-and-settings.md
project_name/: main.py
scripts/: analyze_debug_logs.py  extract_app_modules.py  extract_youtube_probe.py  probe_yt_vid.py  split_monitor.py  verify_channel_reorder.py  verify_local_app_geometry.py
stream_monitor/: __init__.py  __main__.py  app.py  app_dialogs.py  app_ui.py  browser_settings_model.py  browser_win32.py  channel_policy.py  channel_reorder.py  channel_reorder_ui.py  channel_row.py  chrome_prefs.py  config_manager.py  db.py  event_bridge.py  event_sink.py  i18n.py  monitor.py  monitor_controller.py  notifier.py  scroll_guard.py  single_instance.py  startup.py  status_cache.py  tray.py  url_parser.py  util.py  viewer_engagement_model.py
tests/: test_app_status_bridge.py  test_app_ui.py  test_browser_settings_combinations.py  test_browser_settings_model.py  test_channel_policy.py  test_channel_reorder.py  test_channel_reorder_integration.py  test_channel_reorder_pack_e2e.py  test_channel_reorder_ui.py  test_config_manager.py  test_db.py  test_domain.py  test_event_bridge.py  test_event_bus.py  test_main.py  test_monitor.py  test_monitor_controller.py  test_notifier.py  test_offline_timing.py  test_poll_scheduling.py  test_probe_facade.py  test_probe_registry.py  test_reorder_wheel.py  test_scroll_guard.py  test_smoke.py  test_startup.py  test_status_cache.py  test_twitch_archive.py  (+7 more)
(+30 files in other folders)
