[project]
name = "stream-monitor"
version = "0.8.0"
description = "哈嘍主播 — 監控 Twitch/YouTube 實況主開播狀態的桌面應用程式"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "customtkinter>=5.2",
    "requests>=2.31",
    "Pillow>=10.0",
    "winotify>=1.1; sys_platform == 'win32'",
    "pystray>=0.19",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
stream-monitor = "stream_monitor.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
